--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "postinstall": "prisma generate --schema=../prisma/schema.prisma",
+    "postinstall": "prisma generate",
     "start": "node index.js"
   },
   "dependencies": {
